Help for internal relesae

--- a/deploy/runtime/help/html/fin_leveraged_partnership.htm
+++ b/deploy/runtime/help/html/fin_leveraged_partnership.htm
@@ -162,7 +162,7 @@
 <p class="p_EquationExcel"><span class="f_EquationExcel">Principal Amount ($) = Total Installed Cost ($) × Percent of Installed Costs (%)</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Interest</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The total interest payment due for each construction period loan, assuming </span><span class="f_Text">that 100% of the construction balance is outstanding for half of the construction period</span><span class="f_VariableDescription">.</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Interest ($) = Principal Amount ($) × Loan Rate (%/yr) / 12 (mos/yr) × 0.5</span></p>
+<p class="p_EquationExcel"><span class="f_EquationExcel">Interest ($) = Principal Amount ($) × Loan Rate (%/yr) ÷ 12 (mos/yr) × Months prior to operation ÷ 2</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Total Construction Financing Cost</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">SAM includes the total construction financing cost in the project cost.</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Total Construction Financing Cost = Interest + Up-front Fee Amount</span></p>
