--- a/deploy/runtime/help/html/libraries.htm
+++ b/deploy/runtime/help/html/libraries.htm
@@ -173,8 +173,8 @@
 </tr>
 </table>
 </div>
-<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><a id="librarybrowser"></a><span class="f_Heading3_atocs_">The Library Browser</span></h3>
-<p class="p_Text"><span class="f_Text">SAM displays data from a library in the library browser. To choose an item from the library, click a row in the table, and SAM automatically populates the associated input variables with values from the library.</span></p>
+<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><a id="librarybrowser"></a><span class="f_Heading3_atocs_">Choosing Items from a Library</span></h3>
+<p class="p_Text"><span class="f_Text">SAM displays library items in a list. To choose an item from the library, click a row in the list. Depending on the input page, SAM either populates the associated input variables with values from the library, or applies the values after you click an </span><span class="f_CHInterfaceElement">Apply Values from Library</span><span class="f_Text"> button.</span></p>
 <p class="p_Text"><img src="ss_librarybrowser.gif" width="631" height="272" alt="SS_LibraryBrowser" style="width:631px;height:272px;border:none" /></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Modifying Libraries</span></h3>
 <p class="p_Text"><span class="f_Text">For most applications, you do not need to modify libraries. However, if you have reason to modify a library, you can easily do so by editing the library file with a text editor or spreadsheet program.</span></p>
