--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -516,9 +516,9 @@
 </li>
 <li class="heading2" id="i23.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.3" href="mtf_irr.htm" target="hmcontent"><span class="heading2" id="s23.3">Internal Rate of Return (IRR)</span></a>
 </li>
-<li class="heading2" id="i23.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.4" href="mtf_lcoe.htm" target="hmcontent"><span class="heading2" id="s23.4">Levelized Cost of Energy (LCOE)</span></a>
+<li class="heading2" id="i23.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.4" href="mtf_lcoe.htm" target="hmcontent"><span class="heading2" id="s23.4">Levelized cost</span></a>
 </li>
-<li class="heading2" id="i23.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.5" href="mtf_lppa.htm" target="hmcontent"><span class="heading2" id="s23.5">Levelized PPA Price (LPPA Price)</span></a>
+<li class="heading2" id="i23.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.5" href="mtf_lppa.htm" target="hmcontent"><span class="heading2" id="s23.5">Levelized revenue</span></a>
 </li>
 <li class="heading2" id="i23.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.6" href="mtf_npv.htm" target="hmcontent"><span class="heading2" id="s23.6">Net Present Value (NPV)</span></a>
 </li>
@@ -608,27 +608,29 @@
 </li>
 <li class="heading2" id="i26.2" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.2" href="3dshad-reference.htm" target="hmcontent"><span class="heading2" id="s26.2" ondblclick="return dblclicked(this)">Reference</span></a>
 <ul id="ul26.2" style="list-style-type:none">
-<li class="heading3" id="i26.2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.1" href="3dshad-location.htm" target="hmcontent"><span class="heading3" id="s26.2.1">Location</span></a>
+<li class="heading3" id="i26.2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.1" href="shade_data_description.htm" target="hmcontent"><span class="heading3" id="s26.2.1">Shade data description</span></a>
 </li>
-<li class="heading3" id="i26.2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.2" href="3dshad-create.htm" target="hmcontent"><span class="heading3" id="s26.2.2">Create Active Surface</span></a>
+<li class="heading3" id="i26.2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.2" href="3dshad-location.htm" target="hmcontent"><span class="heading3" id="s26.2.2">Location</span></a>
 </li>
-<li class="heading3" id="i26.2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.3" href="shading_objects.htm" target="hmcontent"><span class="heading3" id="s26.2.3">Create Shading Object</span></a>
+<li class="heading3" id="i26.2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.3" href="3dshad-create.htm" target="hmcontent"><span class="heading3" id="s26.2.3">Active surfaces</span></a>
 </li>
-<li class="heading3" id="i26.2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.4" href="3dshad-3d-scene.htm" target="hmcontent"><span class="heading3" id="s26.2.4">3D Scene</span></a>
+<li class="heading3" id="i26.2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.4" href="shading_objects.htm" target="hmcontent"><span class="heading3" id="s26.2.4">Shading objects</span></a>
 </li>
-<li class="heading3" id="i26.2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.5" href="3dshad-birds-eye.htm" target="hmcontent"><span class="heading3" id="s26.2.5">Bird's Eye</span></a>
+<li class="heading3" id="i26.2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.5" href="3dshad-3d-scene.htm" target="hmcontent"><span class="heading3" id="s26.2.5">3D scene view</span></a>
 </li>
-<li class="heading3" id="i26.2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.6" href="3dshad-elevations.htm" target="hmcontent"><span class="heading3" id="s26.2.6">Elevations</span></a>
+<li class="heading3" id="i26.2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.6" href="3dshad-birds-eye.htm" target="hmcontent"><span class="heading3" id="s26.2.6">Bird's eye view</span></a>
 </li>
-<li class="heading3" id="i26.2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.7" href="3dshad-analyze.htm" target="hmcontent"><span class="heading3" id="s26.2.7">Analyze</span></a>
+<li class="heading3" id="i26.2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.7" href="3dshad-elevations.htm" target="hmcontent"><span class="heading3" id="s26.2.7">Elevations view</span></a>
 </li>
-<li class="heading3" id="i26.2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.8" href="3dshad-import_export.htm" target="hmcontent"><span class="heading3" id="s26.2.8">Import and Export</span></a>
+<li class="heading3" id="i26.2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.8" href="3dshad-analyze.htm" target="hmcontent"><span class="heading3" id="s26.2.8">Analyze</span></a>
 </li>
-<li class="heading3" id="i26.2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.9" href="3dshad-save-close.htm" target="hmcontent"><span class="heading3" id="s26.2.9">Save and Close</span></a>
+<li class="heading3" id="i26.2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.9" href="3dshad-import_export.htm" target="hmcontent"><span class="heading3" id="s26.2.9">Import and Export</span></a>
 </li>
-<li class="heading3" id="i26.2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.10" href="3dshad-shortcuts.htm" target="hmcontent"><span class="heading3" id="s26.2.10">Shortcuts</span></a>
+<li class="heading3" id="i26.2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.10" href="3dshad-save-close.htm" target="hmcontent"><span class="heading3" id="s26.2.10">Save and Close</span></a>
 </li>
-<li class="heading3" id="i26.2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.11" href="3dshad-file-types.htm" target="hmcontent"><span class="heading3" id="s26.2.11">File Types</span></a>
+<li class="heading3" id="i26.2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.11" href="3dshad-shortcuts.htm" target="hmcontent"><span class="heading3" id="s26.2.11">Shortcuts</span></a>
+</li>
+<li class="heading3" id="i26.2.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.12" href="3dshad-file-types.htm" target="hmcontent"><span class="heading3" id="s26.2.12">File Types</span></a>
 </li>
 </ul>
 </li>
