--- a/deploy/runtime/help/html/mslf_solar_field.htm
+++ b/deploy/runtime/help/html/mslf_solar_field.htm
@@ -123,6 +123,7 @@
 <p style="margin: 0px 0px 8px 24px;"><span style="font-family: Verdana;">Thermal energy output from the solar field at design conditions. This value is calculated based on the actual aperture area of the field and the estimated loop conversion efficiency at design.</span></p>
 <p class="p_VariableDescription"><img src="eq_lf_q-sf-design.gif" width="281" height="33" alt="EQ_LF_Q-sf-design" style="width:281px;height:33px;border:none" /></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><a id="landarea"></a><span class="f_Heading3_atocs_">Land Area</span></h3>
+<p class="p_Text"><span class="f_Text">The land area inputs determine the total land area in acres that you can use to estimate land-related costs in $/acres on the <a href="trough_system_costs.htm" class="topiclink">System Costs</a> page. The land area inputs are inputs to the financial model, not the performance model, so they do not affect the performance model energy calculations.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Solar Field Land Area (m²)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The actual aperture area converted from square meters to acres:</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Solar Field Area (acres) = Actual Aperture (m²) × Row Spacing (m) / Maximum SCA Width (m) × 0.0002471 (acres/m²)</span></p>
