Help for internal release - includes Mike's new tower documentation

--- a/deploy/runtime/help/html/dspt_heliostat_field.htm
+++ b/deploy/runtime/help/html/dspt_heliostat_field.htm
@@ -88,7 +88,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Calculated Total Land Area, acres</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Land area required for the entire system including the solar field land area.</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Total Land Area (acres) = Non-Solar Field Area (acres) + Area of Zones Occupied by Heliostats (m²) × Solar Field Land Area Multiplier × 0.0002471 (acres/m)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The area of zones occupied by heliostats depends on the field geometry, which is either calculated by the field optimization wizard, or for a rectangular field, depends on the geometry you specify.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The area of zones occupied by heliostats depends on the field geometry, which is either calculated by the SolarPILOT optimization algorithm, or for a rectangular field, depends on the geometry you specify.</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The land area appears on the System Costs page, where you can specify land costs in dollars per acre.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Specifying the Field</span></h3>
 <p class="p_Text"><span class="f_Text">SAM allows the heliostat locations in the field to be specified either by a set of rectangular coordinates (x-y) or as a number of heliostats per radial section of the field (number of radial and azimuthal zones).</span></p>
