--- a/deploy/runtime/help/html/dspt_tower_and_receiver.htm
+++ b/deploy/runtime/help/html/dspt_tower_and_receiver.htm
@@ -61,7 +61,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Boiler height, m</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Height in meters of the boiler section of the receiver.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Maximum boiler flux, kWt/m²</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The upper limit of the reflected irradiation from the solar field incident on the boiler at any point. For systems optimized with the wizard, SAM ensures that the optimal receiver size and heliostat positions result in a receiver flux that does not exceed this value.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The upper limit of the reflected irradiation from the solar field incident on the boiler at any point. For systems optimized with SolarPILOT, SAM ensures that the optimal receiver size and heliostat positions result in a receiver flux that does not exceed this value.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Outside diameter of boiler tubes, m</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The outer diameter in meters of the individual parallel boiler tubes that carry the water/steam through the boiler panels.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Thickness of boiler tubes, m</span></p>
@@ -76,7 +76,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Superheater height, m</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Height in meters of the superheater section of the receiver.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Maximum superheater flux, kWt/m²</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The upper limit of the reflected irradiation from the solar field incident on the superheater at any point. For systems optimized with the wizard, SAM ensures that the optimal receiver size and heliostat positions result in a receiver flux that does not exceed this value.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The upper limit of the reflected irradiation from the solar field incident on the superheater at any point. For systems optimized with SolarPILOT, SAM ensures that the optimal receiver size and heliostat positions result in a receiver flux that does not exceed this value.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Outside diameter of superheater tubes, m</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The outer diameter in meters of the individual parallel superheater tubes that carry the steam through the superheater panels.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Thickness of superheater tubes, m</span></p>
@@ -91,7 +91,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Reheater height, m</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Height in meters of the reheater section of the receiver.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Maximum reheater flux, kWt/m²</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The upper limit of the reflected irradiation from the solar field incident on the reheater at any point. For systems optimized with the wizard, SAM ensures that the optimal receiver size and heliostat positions result in a receiver flux that does not exceed this value.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The upper limit of the reflected irradiation from the solar field incident on the reheater at any point. For systems optimized with SolarPILOT, SAM ensures that the optimal receiver size and heliostat positions result in a receiver flux that does not exceed this value.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Outside diameter of reheater tubes, m</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The outer diameter in meters of the individual parallel reheater tubes that carry the steam through the reheater panels.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Thickness of reheater tubes, m</span></p>
