--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -102,7 +102,7 @@
 </li>
 <li class="heading2" id="i2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.10" href="simulation_messages.htm" target="hmcontent"><span class="heading2" id="s2.10">Messages and Warnings</span></a>
 </li>
-<li class="heading2" id="i2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.11" href="results_page.htm" target="hmcontent"><span class="heading2" id="s2.11">Results Page</span></a>
+<li class="heading2" id="i2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.11" href="results_page.htm" target="hmcontent"><span class="heading2" id="s2.11">Results</span></a>
 </li>
 <li class="heading2" id="i2.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.12" href="youtube_channel.htm" target="hmcontent"><span class="heading2" id="s2.12">Videos</span></a>
 </li>
@@ -330,7 +330,7 @@
 <ul id="ul13" style="list-style-type:none">
 <li class="heading2" id="i13.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a13.1" href="pt_location_and_resource.htm" target="hmcontent"><span class="heading2" id="s13.1">Location and Resource</span></a>
 </li>
-<li class="heading2" id="i13.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a13.2" href="heliostat_field_optimization.htm" target="hmcontent"><span class="heading2" id="s13.2">Heliostat Field Optimization</span></a>
+<li class="heading2" id="i13.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a13.2" href="heliostat_field_optimization.htm" target="hmcontent"><span class="heading2" id="s13.2">Heliostat Field Design</span></a>
 </li>
 <li class="heading2" id="i13.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a13.3" href="pt_system_costs.htm" target="hmcontent"><span class="heading2" id="s13.3">System Costs</span></a>
 </li>
@@ -470,7 +470,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i21" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a21" href="residential_and_commercial_pro.htm" target="hmcontent"><span class="heading1" id="s21" ondblclick="return dblclicked(this)">PPA Revenue and TOD</span></a>
+<li class="heading1" id="i21" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a21" href="residential_and_commercial_pro.htm" target="hmcontent"><span class="heading1" id="s21" ondblclick="return dblclicked(this)">PPA Price and TOD Factors</span></a>
 <ul id="ul21" style="list-style-type:none">
 <li class="heading2" id="i21.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a21.1" href="tod_factors.htm" target="hmcontent"><span class="heading2" id="s21.1">Time of Delivery Factors</span></a>
 </li>
@@ -518,7 +518,7 @@
 </li>
 <li class="heading2" id="i23.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.4" href="mtf_lcoe.htm" target="hmcontent"><span class="heading2" id="s23.4">Levelized cost</span></a>
 </li>
-<li class="heading2" id="i23.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.5" href="mtf_lppa.htm" target="hmcontent"><span class="heading2" id="s23.5">Levelized revenue</span></a>
+<li class="heading2" id="i23.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.5" href="mtf_lppa.htm" target="hmcontent"><span class="heading2" id="s23.5">Levelized PPA price</span></a>
 </li>
 <li class="heading2" id="i23.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.6" href="mtf_npv.htm" target="hmcontent"><span class="heading2" id="s23.6">Net Present Value (NPV)</span></a>
 </li>
@@ -554,7 +554,7 @@
 </li>
 <li class="heading2" id="i24.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a24.10" href="mt_solar_fraction.htm" target="hmcontent"><span class="heading2" id="s24.10">Solar Fraction</span></a>
 </li>
-<li class="heading2" id="i24.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a24.11" href="mt_system_performance_factor.htm" target="hmcontent"><span class="heading2" id="s24.11">System Performance Factor</span></a>
+<li class="heading2" id="i24.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a24.11" href="mt_system_performance_factor.htm" target="hmcontent"><span class="heading2" id="s24.11">Performance Ratio</span></a>
 </li>
 </ul>
 </li>
