Help for update release

--- a/deploy/runtime/help/html/mslf_thermal_storage.htm
+++ b/deploy/runtime/help/html/mslf_thermal_storage.htm
@@ -38,7 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p>Enter topic text here.</p>
+<p class="p_Text"><span class="f_Text">For questions about the molten salt linear Fresnel model, <a href="mailto:sam.support@nrel.gov?subject=Direct%20Steam%20Linear%20Fresnel%20from%20SAM%20Help" class="weblink" title="Email SAM support">contact SAM support</a>.</span></p>
 
 </td></tr></table>
 
