--- a/deploy/runtime/help/html/mt_capacity_factor.htm
+++ b/deploy/runtime/help/html/mt_capacity_factor.htm
@@ -41,8 +41,8 @@
 <p class="p_Text"><span class="f_Text">The capacity factor is the ratio of the system's predicted electrical output in the first year of operation to the nameplate output, which is equivalent to the quantity of energy the system would generate if it operated at its nameplate capacity for every hour of the year. For PV systems, the capacity factor is an AC-to-DC value. For other systems, the capacity is an AC-to-AC value.</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Capacity Factor = Net Annual Energy (kWhac/yr) / System Capacity (kWdc or kWac) / 8760 (h/yr)</span></p>
 <p class="p_Text"><span class="f_Text">Where </span><span class="f_Emphasis">Net Annual Energy</span><span class="f_Text"> is the total annual electric generation in the first year of operation, and System</span><span class="f_Emphasis"> Capacity</span><span class="f_Text"> is the system's nameplate capacity (see table below). For PV systems the capacity is in DC kW, for other system systems, the capacity is in AC kW.</span></p>
-<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the BeOpt/TRNSYS Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
-<p class="p_TitleTable"><span class="f_TitleTable">Table 20. Nameplate system capacity values for each technology.</span></p>
+<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
+<p class="p_TitleTable"><span class="f_TitleTable">Table 18. Nameplate system capacity values for each technology.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table style="border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
 <td style="vertical-align:top; padding:0px;"><p class="p_TableHeadColumn"><span class="f_TableHeadColumn">Performance Model</span></p>
@@ -129,7 +129,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -149,7 +149,7 @@
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
-<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">BeOpt/TRNSYS Solar Water Heating Model (Thermal)</span></p>
+<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Water Heating Model (Thermal)</span></p>
 </td>
 <td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Nameplate Capacity (kWt)</span></p>
 </td>
