--- a/deploy/runtime/help/html/p50p90.htm
+++ b/deploy/runtime/help/html/p50p90.htm
@@ -39,6 +39,8 @@
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
 <p class="p_Text"><span class="f_Text">A P90 value is a value that is expected to be met or exceeded 90% of the time. SAM can generate P50 and P90 values for a system's annual energy output and other metrics by running hourly simulations over a multi-year period.</span></p>
+<div class="p_Video"><div style="margin:0px auto 0px auto;width:420px;height:315px;padding:0px 0px 0px 0px"><iframe width="420" height="315" src="https://www.youtube.com/embed/7-C4olWBXMw" frameborder="0" allowfullscreen></iframe>
+</div></div>
 <p class="p_Text"><span class="f_Text">SAM's P50/P90 simulations require at least 10 weather files of consecutive single-year data. The files must be in one of the <a href="weather_format.htm" class="topiclink">weather file formats</a> that SAM can read and use the naming convention described below.</span></p>
 <p class="p_Note"><span class="f_CHNote">Notes.</span><span class="f_Note"> </span><br />
 <span class="f_Note">&nbsp;</span><br />
