--- a/deploy/runtime/help/html/cf_leveraged_partership_flip.htm
+++ b/deploy/runtime/help/html/cf_leveraged_partership_flip.htm
@@ -99,7 +99,7 @@
 <p class="p_VariableName"><span class="f_VariableName">O&amp;M Capacity-based expense</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">O&amp;M Capacity-based Expense in Year n = Fixed Cost by Capacity ($/kW-yr) × System Rated Capacity × (1 + Inflation Rate + Escalation Rate)^(n-1)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">Fixed Cost by Capacity</span><span class="f_VariableDescription"> is from the <a href="system_costs.htm" class="topiclink">System Costs</a> page, and </span><span class="f_Emphasis">Inflation Rate</span><span class="f_VariableDescription"> and </span><span class="f_Emphasis">Escalation Rate</span><span class="f_VariableDescription"> are from the <a href="financial_parameters.htm" class="topiclink">Financial Parameters</a> page.</span></p>
-<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the BeOpt/TRNSYS Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
+<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
 <p class="p_TitleTable"><span class="f_TitleTable">Table 25. Nameplate system capacity values for each technology.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table style="border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
@@ -187,7 +187,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -207,7 +207,7 @@
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
-<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">BeOpt/TRNSYS Solar Water Heating Model (Thermal)</span></p>
+<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Water Heating Model (Thermal)</span></p>
 </td>
 <td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Nameplate Capacity (kWt)</span></p>
 </td>
@@ -534,7 +534,7 @@
 <p class="p_EquationExcel"><span class="f_EquationExcel">CBI in Year 0 = System Capacity (W) × Amount ($/W), up to Maximum</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Where System Capacity is the rated capacity of the system, and </span><span class="f_Emphasis">Amount</span><span class="f_VariableDescription"> and </span><span class="f_Emphasis">Maximum</span><span class="f_VariableDescription"> are the values you specify on the <a href="incentives.htm" class="topiclink">Incentives</a> page.</span></p>
 <p class="p_VariableDescription"><span class="f_Emphasis">Total CBI</span><span class="f_VariableDescription"> is the sum of the four CBI values (federal, state, utility, other).</span></p>
-<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the BeOpt/TRNSYS Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
+<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
 <p class="p_TitleTable"><span class="f_TitleTable">Table 26. Nameplate system capacity values for each technology.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table style="border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
@@ -622,7 +622,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -642,7 +642,7 @@
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
-<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">BeOpt/TRNSYS Solar Water Heating Model (Thermal)</span></p>
+<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Water Heating Model (Thermal)</span></p>
 </td>
 <td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Nameplate Capacity (kWt)</span></p>
 </td>
@@ -694,46 +694,10 @@
 <p class="p_Text"><span class="f_Text">The debt amounts depend on the following inputs from the <a href="financial_parameters.htm" class="topiclink">Financial Parameters</a> page:</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List">Debt Rate</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List">DSCR</span></td></tr></table></div><h4 class="p_Heading4"><span class="f_Heading4">Debt Repayment</span></h4>
 <p class="p_Text"><span class="f_Text">The debt repayment rows show the size of annual debt payments.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Debt total payment</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Debt interest payment</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Debt principal payment</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Debt balance</span></p>
 <h4 class="p_Heading4"><span class="f_Heading4">Debt Sizing (Constant Payments)</span></h4>
 <p class="p_Text"><span class="f_Text">When you specify the debt percent as an input on the Financial Parameters page, SAM assumes constant total annual debt payments so that the annual debt service coverage ratio (DSCR) varies from year to year. In this mode, SAM reports the minimum DSCR in the Metrics table.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Cash available for debt service (CAFDS)</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Debt total payment</span></p>
-<p class="p_VariableName"><span class="f_VariableName">&nbsp;</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Pre-tax DSCR</span></p>
 <h4 class="p_Heading4"><span class="f_Heading4">Debt Sizing (Constant DSCR)</span></h4>
 <p class="p_Text"><span class="f_Text">When you specify the DSCR as an input on the Financial Parameters page, SAM assumes a constant annual DSCR and sculpted debt, where annual debt payments vary to match cash available for debt services. In this mode, SAM reports the debt percent in the Metrics table.</span></p>
-<p class="p_Text"><span class="f_Text">Cash available for debt service (CAFDS)</span></p>
-<p class="p_Text"><span class="f_Text">DSCR</span></p>
-<p class="p_Text"><span class="f_Text">Size of debt</span></p>
-<p class="p_Text"><span class="f_Text">&nbsp;</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Funding</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">&nbsp;</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Repayment</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Repayment applies in Year One and later, and represents annual debt payments.</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Repayment in Year n = - Principal in Year n</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">Principal in Year n</span><span class="f_VariableDescription"> is described below.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Ending Balance</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The ending balance applies in Year Zero and later:</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Ending Balance in Year Zero = Funding</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">Funding</span><span class="f_VariableDescription"> is described above.</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Ending Balance in Year n = Ending Balance in Year n-1 + Repayment in Year n</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">Repayment</span><span class="f_VariableDescription"> is described above.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Principal</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The principal applies in Year One and later:</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Principal in Year n = Total P&amp;I in Year n - Interest in Year n</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">Total P&amp;I</span><span class="f_VariableDescription"> and </span><span class="f_Emphasis">Interest</span><span class="f_VariableDescription"> are described below.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Interest</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The interest applies in Year One and later:</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Interest in Year n = Ending Balance in Year n × Debt Rate</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">Ending Balance</span><span class="f_VariableDescription"> is described above, and </span><span class="f_Emphasis">Debt Rate</span><span class="f_VariableDescription"> is from the Financial Parameters page.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Total P&amp;I</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The total principal and interest applies in Year One and later:</span></p>
-<p class="p_EquationExcel"><span class="f_EquationExcel">Total P&amp;I in Year n = CAFDS in Year n ÷ DSCR</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Where </span><span class="f_Emphasis">CAFDS in Year n</span><span class="f_VariableDescription"> is described above (under Funding), and </span><span class="f_Emphasis">DSCR</span><span class="f_VariableDescription"> is from the Financial Parameters page.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Reserve Accounts</span></h3>
 <p class="p_Text"><span class="f_Text">Reserve accounts include debt service, working capital reserve, and major equipment replacement reserves. The reserve account amounts depend on the following inputs from the Financial Parameters page:</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List">Inflation Rate</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List">Debt Service Reserve Account (months P&amp;I)</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List">Working Capital Reserve Months of Operating Costs</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 3px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_List">Major Equipment Replacement Reserve Account [1-3] Frequency (years)</span></td></tr></table></div><div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_ListLast">Major Equipment Replacement [1-3] (Year 1 $)</span></td></tr></table></div><p class="p_VariableName"><span class="f_VariableName">Lease Payment Reserve (Sale Leaseback only)</span></p>
