--- a/deploy/runtime/help/html/cf_residential_and_commercial.htm
+++ b/deploy/runtime/help/html/cf_residential_and_commercial.htm
@@ -104,7 +104,7 @@
 <p class="p_EquationExcel"><span class="f_EquationExcel">Variable O&amp;M in Year n = Variable Cost by Generation ($/MWh) / 1000 (kWh/MWh) × Energy in Year n (kWh) × (1 + Inflation Rate + Escalation Rate)^(n-1)</span></p>
 <p class="p_VariableDescription"><span class="f_Text">Where </span><span class="f_VariableDescription">Fixed Annual Cost</span><span class="f_Text">, </span><span class="f_VariableDescription">Fixed Cost by Capacity</span><span class="f_Text">, </span><span class="f_VariableDescription">Variable Cost by Generation</span><span class="f_Text">, and </span><span class="f_VariableDescription">Escalation Rate</span><span class="f_Text"> are from the <a href="system_costs.htm" class="topiclink">System Costs</a> page, and </span><span class="f_VariableDescription">Inflation Rate</span><span class="f_Text"> is from the <a href="financial_parameters.htm" class="topiclink">Financial Parameters</a> page.</span></p>
 <p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> When you specify O&amp;M costs using an annual schedule instead of a single value, SAM does not apply the inflation rate or escalation rate to the values you specify for each year.</span></p>
-<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the BeOpt/TRNSYS Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
+<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
 <p class="p_TitleTable"><span class="f_TitleTable">Table 19. Nameplate system capacity values for each technology.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table style="border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
@@ -192,7 +192,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -212,7 +212,7 @@
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
-<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">BeOpt/TRNSYS Solar Water Heating Model (Thermal)</span></p>
+<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Water Heating Model (Thermal)</span></p>
 </td>
 <td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Nameplate Capacity (kWt)</span></p>
 </td>
@@ -319,7 +319,7 @@
 <p class="p_EquationExcel"><span class="f_EquationExcel">CBI in Year 0 = System Capacity (W) × Amount ($/W), up to Maximum</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Where System Capacity is the rated capacity of the system, and </span><span class="f_Emphasis">Amount</span><span class="f_VariableDescription"> and </span><span class="f_Emphasis">Maximum</span><span class="f_VariableDescription"> are the values you specify on the <a href="incentives.htm" class="topiclink">Incentives</a> page.</span></p>
 <p class="p_VariableDescription"><span class="f_Emphasis">Total CBI</span><span class="f_VariableDescription"> is the sum of the four CBI values (federal, state, utility, other).</span></p>
-<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the BeOpt/TRNSYS Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
+<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
 <p class="p_TitleTable"><span class="f_TitleTable">Table 20. Nameplate system capacity values for each technology.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table style="border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
@@ -407,7 +407,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -427,7 +427,7 @@
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
-<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">BeOpt/TRNSYS Solar Water Heating Model (Thermal)</span></p>
+<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Water Heating Model (Thermal)</span></p>
 </td>
 <td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Nameplate Capacity (kWt)</span></p>
 </td>
