--- a/deploy/runtime/help/html/fin_sale_leaseback.htm
+++ b/deploy/runtime/help/html/fin_sale_leaseback.htm
@@ -74,7 +74,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Amount</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">This amount of the developer's margin.</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Amount ($) = Lessee Operating Margin ($/kW) × System Nameplate Capacity (kW)</span></p>
-<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the BeOpt/TRNSYS Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
+<p class="p_Text"><span class="f_Text">The system nameplate capacity depends on technology being modeled. SAM converts the capacity value to the appropriate units (MW, kW, or W) before using it in calculations. For the photovoltaic models, the capacity is a DC power rating, and for the others it is an AC power rating. For the Solar Water Heating Model, the capacity is a thermal rating, while for the others it is an electric rating.</span></p>
 <p class="p_TitleTable"><span class="f_TitleTable">Table 15. Nameplate system capacity values for each technology.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table style="border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
@@ -162,7 +162,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Net nameplate capacity (MWe)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="mslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="dslf_power_cycle.htm" class="topiclink">Power Cycle</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -182,7 +182,7 @@
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
-<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">BeOpt/TRNSYS Solar Water Heating Model (Thermal)</span></p>
+<td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Water Heating Model (Thermal)</span></p>
 </td>
 <td style="vertical-align:top; background-color:#c0c0c0; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">Nameplate Capacity (kWt)</span></p>
 </td>
