--- a/deploy/runtime/help/html/mslf_parasitics.htm
+++ b/deploy/runtime/help/html/mslf_parasitics.htm
@@ -38,26 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">The parameters on the Parasitics page describe parasitic electrical loads and other losses in the linear fresnel system.</span></p>
-<p class="p_Text"><span class="f_Text">Page numbers relevant to this section from the Kistler B (1986) <a href="references.htm" class="topiclink">reference</a> is:</span></p>
-<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_ListLast">Kistler 224</span></td></tr></table></div><p class="p_Text"><span class="f_Text">The parasitic loss variables are factors that SAM uses to calculate the estimated total parasitic loss and hourly parasitic losses, which are described in more detail below.</span></p>
-<p class="p_Text"><span class="f_Text">SAM calculates two types parasitic loss values. The first is an estimate of the total parasitic losses used to calculate the power cycle design thermal input, and the second are the hourly values calculated during simulation of the system's performance.</span></p>
-<p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> Parasitic losses from components that do not exist in the system should be set to zero.</span></p>
-<h4 class="p_Heading4"><span class="f_Heading4">Parasitic Energy Consumption</span></h4>
-<p class="p_VariableName"><span class="f_VariableName">Piping thermal loss coefficient (W/K-m2-aper)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Thermal loss per area of collector aperture as calculated on the <a href="mslf_solar_field.htm" class="topiclink">Solar Field</a> page. </span></p>
-<p class="p_VariableName"><span class="f_VariableName">Tracking Power &nbsp;(W/m2)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The electric power in Watts per area of collector aperture required by the tracking mechanism of each collector in the field during hours of operation.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Tracking Power Loss (W)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">SAM calculates the power loss in Watts based on the W/m2 value you specify above.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Fraction of rated gross power consumed at all times</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">The fraction of design-point gross power output from the power cycle that is used for parasitics associated with facility operation, HVAC, control, lighting, etc.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Fixed parasitic loss (MWe)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">SAM calculates the fixed loss based on the fraction you specify above.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Balance of Plant Parasitic (MWe/MWcap)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Losses as a fraction of the power cycle electrical power output that apply in hours when the power block operates.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Aux heater, boiler parasitic (MWe/MWcap)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Parasitic power consumption incurred during operation of the backup fossil boiler, as a function of thermal power production of the fossil system. This parasitic is only applicable for systems with active fossil backup, and applies during hours in which the fossil system produces thermal power.</span></p>
+<p class="p_Text"><span class="f_Text">For questions about the molten salt linear Fresnel model, <a href="mailto:sam.support@nrel.gov?subject=Direct%20Steam%20Linear%20Fresnel%20from%20SAM%20Help" class="weblink" title="Email SAM support">contact SAM support</a>.</span></p>
 
 </td></tr></table>
 
