fix release notes "solar advisor model"

--- a/deploy/runtime/help/release_notes.html
+++ b/deploy/runtime/help/release_notes.html
@@ -22,6 +22,10 @@
 </style>
   </head>
   <body>
+      <p style="font-family:Segoe UI,sans-serif;font-size:20pt;text-align:center;color:#0072C6;">System Advisor Model (SAM) Release Notes</p>
+	<h1>Version 2015.1.30 November 2014</h1>
+	<p>This is a major update to the SAM software product that is rebuilt from the ground up.  It adds several major new capabilities:
+	</p>
     <h1>Version 2015.1.30 January 2015</h1>
     <p>This is a maintenance update to SAM 2014.11.24 that addresses several important bugs and adds new features:</p>
     <ul>
