update release notes

--- a/deploy/runtime/help/releasenotes.html
+++ b/deploy/runtime/help/releasenotes.html
@@ -24,9 +24,10 @@
     <p style="font-family:Segoe UI,sans-serif;font-size:20pt;text-align:center;color:#0072C6;">System Advisor Model (SAM) Release
     Notes</p>
     <h1>Version 2015.1.30 January 2015</h1>
-    <p>This is a maintenance update to SAM 2014.11.24 that addresses several important bugs and adds new features:</p>
+    <p>This is a maintenance update to SAM 2014.11.24 that fixes several bugs and adds new features:</p>
     <ul>
       <li>Fixed bugs in the PPA financial model calculations of levelized cost and levelized PPA price metrics</li>
+	  <li>Fixed s time series data viewer bug for computers with time zone setting greater than GMT+8</li>
       <li>Added an option to the PPA financial models with debt (Single Owner and Leveraged Partnership Flip) that makes it
       possible to specify the size of debt as a percent of installed cost with fixed annual payments in addition to the current
       option to size debt with a debt fraction based on cash available for debt service</li>
